<resources>
    <string name="app_name">Visitor Detector</string>
    <string name="no_devices">No devices</string>
    <string name="main_activity_title">Visitor Detector</string>
    <string name="main_activity_open_drawer">Open navigation drawer</string>
    <string name="main_activity_close_drawer">Close navigation drawer</string>
    <string name="drawer_devices_title">Devices</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_license_attributions_title">Licenses</string>
    <string name="device_tabs_fragment_title">Devices</string>
    <string name="unclassified_devices_tab_title">Unclassified</string>
    <string name="visitor_devices_tab_title">Visitor</string>
    <string name="home_devices_tab_title">Home</string>
    <string name="device_menu_move_to_visitor">Set as visitor</string>
    <string name="device_menu_move_to_home">Set as home</string>
    <string name="device_edit_description">Edit description</string>
    <string name="visitor_detected_notification_title">Visitor Detected</string>
    <string name="visitor_detected_notification_text">A non-home device has been detected on the network</string>
    <string name="error_fetching_devices">There was an issue fetching devices</string>
    <string name="error_fetching_devices_notification_title">Error detecting visitors</string>
    <string name="license_attributions_fragment_title">Licenses</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="settings_home_wifi_networks">Home wifi networks</string>
    <string name="settings_values_split_by_newline">Split multiple values by newline</string>
    <string name="settings_router_ip_address">Router IP address</string>
    <string name="settings_router_username">Router username</string>
    <string name="settings_router_password">Router password</string>
    <string name="settings_invalid_value_dialog_title">Invalid value</string>
    <string name="settings_home_wifi_networks_cant_be_empty">Network name cannot be empty</string>
    <string name="settings_router_ip_address_cant_be_empty">Router IP address cannot be empty</string>
    <string name="settings_router_ip_address_must_be_ip_address">Router IP address must be a valid IP address</string>
    <string name="settings_router_ip_address_must_be_local_ip_address">Router IP address must be a local IP address</string>
    <string name="settings_router_username_cant_be_empty">Router username cannot be empty</string>
    <string name="settings_router_password_cant_be_empty">Router password cannot be empty</string>
    <string name="welcome_fragment_title">Welcome</string>
    <string name="welcome_home_wifi_networks">Home wifi networks</string>
    <string name="welcome_home_wifi_networks_cant_be_empty">Network name cannot be empty</string>
    <string name="welcome_router_ip_address">Router IP address</string>
    <string name="welcome_router_ip_address_cant_be_empty">Router IP address cannot be empty</string>
    <string name="welcome_router_ip_address_must_be_ip_address">Router IP address must be a valid IP address</string>
    <string name="welcome_router_ip_address_must_be_local_ip_address">Router IP address must be a local IP address</string>
    <string name="welcome_router_username">Router username</string>
    <string name="welcome_router_username_cant_be_empty">Router username cannot be empty</string>
    <string name="welcome_router_password">Router password</string>
    <string name="welcome_router_password_cant_be_empty">Router password cannot be empty</string>
    <string name="welcome_test_settings_button_text">Test settings</string>
    <string name="welcome_next_button_text">Next</string>
    <string name="welcome_test_settings_not_on_network">Not on specified network</string>
    <string name="welcome_test_settings_successful">Successfully retrieved devices</string>
    <string name="welcome_next_failed_to_set_settings">Failed to set settings</string>
</resources>
