<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.beyondtechnicallycorrect.visitordetector.activities.WelcomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/home_wifi_networks_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/welcome_home_wifi_networks"
                android:id="@+id/home_wifi_networks"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/router_ip_address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/welcome_router_ip_address"
                android:id="@+id/router_ip_address"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/router_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/welcome_router_username"
                android:id="@+id/router_username"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/router_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/welcome_router_password"
                android:id="@+id/router_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/test_settings"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_test_settings_button_text"
        android:layout_toStartOf="@+id/next_button" />
    <Button
        android:id="@+id/next_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_next_button_text" />
</RelativeLayout>
